[package]
name = "ra-vec4-repro"
version = "0.1.0"
authors = ["Henrik Rydgård <hrydgard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = {version = "0.10", default-features = false, features = ["std"]}